--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "jquery": "^3.7.0",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
